--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,12 @@ dependencies {
     //ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxjava:2.1.3"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 }
